# Vulkan-Raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: App.cpp  App.hpp  CameraSystem.cpp  CameraSystem.hpp  TestSystem.cpp  TestSystem.hpp  main.cpp
assets/horse_statue_01_8k/: horse_statue_01_8k.gltf
engine/: AssetManager.cpp  AssetManager.hpp  CMakeLists.txt  Engine.cpp  ModelLoader.cpp  ModelLoader.hpp  Renderer.cpp  Renderer.hpp  SceneManager.cpp  VulkanInitializers.cpp  VulkanInitializers.hpp  VulkanTypes.hpp  VulkanUtils.cpp  VulkanUtils.hpp  Window.cpp  Window.hpp  engine.hpp  renderer.hpp
engine/asset_system/: Asset.hpp  AssetHandle.hpp  AssetManager.cpp  AssetManager.hpp  GltfImporter.cpp  GltfImporter.hpp  MaterialAsset.cpp  MaterialAsset.hpp  MeshAsset.cpp  MeshAsset.hpp  ModelAsset.cpp  ModelAsset.hpp  TextureAsset.cpp  TextureAsset.hpp
engine/include/: Engine.hpp  Entity.hpp  InputManager.hpp  SceneManager.hpp  Window.hpp
engine/include/asset/: Asset.hpp  AssetHandle.hpp  AssetManager.hpp  GltfImporter.hpp  MaterialAsset.hpp  MeshAsset.hpp  ModelAsset.hpp  TextureAsset.hpp
engine/include/ecs/: CameraComponent.hpp  Component.hpp  Entity.hpp  EntityManager.hpp  GlobalSingletons.hpp  MeshComponent.hpp  RenderingSystem.hpp  System.hpp  TransformComponent.hpp
engine/include/rendering/: DeletionQueue.hpp  DescriptorManager.hpp  FrameManager.hpp  RTManager.hpp  Renderer.hpp  ResourceManager.hpp  SwapchainManager.hpp  VulkanContext.hpp  VulkanDescriptors.hpp  VulkanInitializers.hpp  VulkanSwapchain.hpp  VulkanTypes.hpp  VulkanUtils.hpp
engine/shaders/: ray-tracing.slang
engine/src/: Engine.cpp  Entity.cpp  InputManager.cpp  Window.cpp
engine/src/asset/: AssetManager.cpp  GltfImporter.cpp  MaterialAsset.cpp  MeshAsset.cpp  ModelAsset.cpp  TextureAsset.cpp
engine/src/ecs/: Component.cpp  Entity.cpp  EntityManager.cpp  RenderingSystem.cpp
engine/src/rendering/: DescriptorManager.cpp  FrameManager.cpp  RTManager.cpp  Renderer.cpp  ResourceManager.cpp  SwapchainManager.cpp  VmaUsage.cpp  VulkanContext.cpp  VulkanDescriptors.cpp  VulkanInitializers.cpp  VulkanSwapchain.cpp  VulkanUtils.cpp
include/: VulkanWrapper.h  Window.h
src/: VulkanWrapper.cpp  Window.cpp  main.cpp
